--- a/package.json
+++ b/package.json
@@ -41,15 +41,18 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0-beta.53",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/preset-env": "^7.0.0-beta.53",
+    "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "flow-bin": "^0.82.0",
     "nodemon": "^1.18.4",
     "prettier": "^1.10.2",
     "prettier-eslint": "^8.8.2"
