Fixed project issues, added babel/polyfill

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boilerplate"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@koa/cors": "2",
     "awilix": "^3.0.9",
     "awilix-koa": "^2.1.1",
