--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejs-koa-boilerplate",
-  "version": "1.0.0",
-  "description": "NodeJS Koa Boilerplate",
-  "main": "./src/bin/www.js",
+  "name": "nodejs-koa-boilerplate-flow",
+  "version": "1.1.0",
+  "description": "NodeJS Koa Boilerplate (Flow)",
+  "main": "./src/index.js",
   "author": "Vlad Morzhanov",
   "license": "MIT",
   "scripts": {
@@ -57,10 +57,5 @@
     "nodemon": "^1.18.4",
     "prettier": "^1.10.2",
     "prettier-eslint": "^8.8.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/VladMorzhanov/nodejs-boilerplate.git"
-  },
-  "homepage": "https://github.com/VladMorzhanov/nodejs-boilerplate#readme"
+  }
 }
